track kwinrc file only on changes

--instead of reading the kwin values all the time
when needed from user actions we now read them
only on startup and when the kwinrc file was
updated/changed

BUG:411657
FIXED-IN:0.9.3